--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,5 +28,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
